tests/ui/rfcs/rfc-2632-const-trait-impl/specializing-constness-2.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/specializing-constness-2.rs:1:30
   |
LL | #![feature(const_trait_impl, effects, min_specialization, rustc_attrs)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0119]: conflicting implementations of trait `A`
  --> $DIR/specializing-constness-2.rs:20:1
   |
LL | impl<T: Default> A for T {
   | ------------------------ first implementation here
...
LL | impl<T: Default + ~const Sup> const A for T {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation

error[E0308]: mismatched types
  --> $DIR/specializing-constness-2.rs:27:5
   |
LL |     <T as A>::a();
   |     ^^^^^^^^^^^^^ expected `host`, found `true`
   |
   = note: expected constant `host`
              found constant `true`

error: aborting due to 2 previous errors; 1 warning emitted

Some errors have detailed explanations: E0119, E0308.
For more information about an error, try `rustc --explain E0119`.
